--- a/style.css
+++ b/style.css
@@ -1,7 +1,7 @@
 body {
   margin: 0;
   padding: 0;
-  background: url('https://raw.githubusercontent.com/username/repository-name/main/images/macbook-wallpaper.jpg') no-repeat center center fixed;
+  background: url(file:///C:/Users/anuja/OneDrive/Personal%20Vault/Pictures/macbook-wallpaper.jpg) no-repeat center center fixed;
   background-size: cover;
   color: white;
   font-family: Arial, sans-serif;
