--- a/style.css
+++ b/style.css
@@ -1,15 +1,6 @@
 body {
-  margin: 0;
-  padding: 0;
-  background-color: black; /* Set background color to black */
+  background: url(file:///C:/Users/anuja/OneDrive/Personal%20Vault/Pictures/macbook-wallpaper.jpg) no-repeat center center/cover;
+  height: 100vh;
   color: white;
   font-family: Arial, sans-serif;
-  height: 100vh;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  flex-direction: column;
-  text-align: center;
-  opacity: 0;
-  animation: fadeIn 2s forwards; /* Animation for fade-in */
 }
