--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background: url(file:///C:/Users/anuja/OneDrive/Personal%20Vault/Pictures/macbook-wallpaper.jpg) no-repeat center center/cover;
+  background: url(https://raw.githubusercontent.com/AnujaThinusaraWeerarathna/my-cool-website/refs/heads/main/wp733846) no-repeat center center/cover;
   height: 100vh;
   color: white;
   font-family: Arial, sans-serif;
