--- a/style.css
+++ b/style.css
@@ -1,6 +1,8 @@
 body {
-  background: url(https://raw.githubusercontent.com/AnujaThinusaraWeerarathna/my-cool-website/refs/heads/main/wp733846) no-repeat center center/cover;
+  background: url('https://raw.githubusercontent.com/AnujaThinusaraWeerarathna/my-cool-website/refs/heads/main/wp7338461.jpg') no-repeat center center/cover;
   height: 100vh;
+  margin: 0;
+  padding: 0;
   color: white;
   font-family: Arial, sans-serif;
 }
