--- a/style.css
+++ b/style.css
@@ -1,8 +1,13 @@
-body {
-  background: url('https://raw.githubusercontent.com/AnujaThinusaraWeerarathna/my-cool-website/refs/heads/main/wp7338461.jpg') no-repeat center center/cover;
-  height: 100vh;
-  margin: 0;
-  padding: 0;
-  color: white;
-  font-family: Arial, sans-serif;
-}
+ body {
+      margin: 0;
+      padding: 0;
+      background: url('https://raw.githubusercontent.com/AnujaThinusaraWeerarathna/my-cool-website/refs/heads/main/wp7338461.jpg') 
+                  no-repeat center center/cover;
+      height: 100vh;
+      color: white;
+      font-family: 'Arial', sans-serif;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      text-align: center;
+      overflow: hidden;
