--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 body {
   margin: 0;
   padding: 0;
-  background: url(https://raw.githubusercontent.com/AnujaThinusaraWeerarathna/my-cool-website/refs/heads/main/882637.webp) 
+  background: url(https://raw.githubusercontent.com/AnujaThinusaraWeerarathna/my-cool-website/refs/heads/main/R.jpg) 
               no-repeat center center/cover;
   height: 100vh;
   color: white;
